# huxi-server

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: backup.rs  config.toml  nginx.conf
htdocs/css/: main.css  tailwind.css
htdocs/css/hl/: github.css
htdocs/docs/: about.md  contact.md  help.md
htdocs/js/: main.js
pgsql/: README.md  setup.sql
src/: config.rs  lib.rs  main.rs  md.rs
src/db/: mod.rs
src/fun/: layout.rs  mod.rs
src/fun/book/: db.rs  mod.rs
src/fun/comment/: db.rs  mod.rs
src/fun/hu/: db.rs  mod.rs
src/fun/image/: db.rs  mod.rs
src/fun/message/: db.rs  mod.rs
src/fun/user/: db.rs  mod.rs
src/fun/widget/: list.rs  mod.rs
src/fun/xi/: db.rs  mod.rs
src/http/: email.rs  error.rs  mod.rs  types.rs
